--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
   },
   "lint-staged": {
     "src/**/*.{js,ts,vue}": [
-      "eslint --fix"
+      "eslint --fix",
+      "git add"
+    ],
+    "src/**/*.{vue,css,sass,scss}": [
+      "stylelint --fix",
+      "git add"
     ]
   },
   "keywords": [],
@@ -38,6 +43,9 @@
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
     "sass": "^1.35.2",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^22.0.0",
+    "stylelint-scss": "^3.20.1",
     "typescript": "^4.3.5",
     "vite": "^2.4.2",
     "vite-plugin-style-import": "^1.0.1",
